<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">唯知</string>
    <string name="hello_world">Hello world!</string>
    <string name="good_dishes">美食</string>
    <string name="main_tab1">全城</string>
    <string name="main_tab2">离我最近</string>
    <string name="main_tab3">筛选</string>
    <string name="item_home">探索</string>
    <string name="item_location">附近</string>
    <string name="item_like">历史</string>
    <string name="item_person">我的</string>
    <string name="action_longin">用户管理/用户登录</string>
    <string name="action_qrcode">扫一扫</string>
    <string name="action_settings">设置</string>
    <string name="login_but">登录</string>
    <string name="login_text">没有账号 ? 现在注册 !</string>
    <string name="login_user">输入用户名</string>
    <string name="login_pwd">输入密码</string>
    <string name="register_name">创建用户名(9~12字符)</string>
    <string name="register_nickname">设置昵称(4~9字符)</string>
    <string name="register_email">输入电子邮箱</string>
    <string name="register_phone">输入手机号码</string>
    <string name="register_pwd">设置密码(9~12字符)</string>
    <string name="register_signup">创建账号</string>
    <string name="useredit_nickname">昵称</string>
    <string name="useredit_phone">手机号码</string>
    <string name="useredit_email">电子邮箱</string>
    <string name="useredit_tag">个性签名</string>
    <string name="useredit_bdate">出生日期: </string>
    <string name="useredit_nian">年</string>
    <string name="useredit_yue">月</string>
    <string name="useredit_ri">日</string>
    <string name="useredit_TiJiao">提交资料</string>
    <string name="useredit_qrcode">我的二维码</string>
    <string name="useredit_message">修改我的资料</string>
    <string name="register_text">已有账号 ? 现在登录 !</string>
    <string name="scan_text">将二维码放入框内,即可自动扫描</string>
    <string name="cap_but">打开链接</string>
    <string name="message_guanzhu_but">关注</string>
    <string name="action_message_jubao">举报</string>
    <string name="qrcode_biaoti">扫一扫</string>
    <string name="qrcode_jieguo">扫描结果</string>
    <string name="tupian_message_topbiaoti">精彩图片</string>
    <string name="welcomedb_text">©2016 唯知|星的方向作品|Fast Pass Its Product</string>
    <string name="metoukp_text">我的基本信息</string>
    <string name="metoukp_guanzhu_text">关注</string>
    <string name="metoukp_shouchan_text">收藏</string>
    <string name="metoukp_zhiling_text">知值</string>
    <string name="remen">热门</string>
    <string name="shudian">书店</string>
    <string name="faxian">发现</string>
    <string name="shangcheng">商城</string>
    <string name="xiaoxi">会话消息</string>
    <string name="mebiaoti">个人主页</string>
    <string name="action_tonzhi_qingkon">清空</string>
    <string name="ListView_NoData"> 抱歉!没有数据喔! </string>
    <string name="ListView_NoData2"> 别急!小二可能在忙! </string>
    <string name="SHOW_GUANZHU">关注该用户</string>
    <string name="SHOW_JUBAO">举报该用户</string>
    <string name="JUBAO_ITEM1">侵犯我的权益</string>
    <string name="JUBAO_TEXT1">发表的文章存在辱骂,歧视,挑衅我的言论,抄袭我的文章。</string>
    <string name="JUBAO_ITEM2">违反国家法律</string>
    <string name="JUBAO_TEXT2">发表的文章内容存在色情,暴力,损害国家利益的言论。</string>
    <string name="JUBAO_ITEM3">违反维知用户协议</string>
    <string name="JUBAO_TEXT3">破坏维知社区文章管理制度,损害他人利益,内容不健康。</string>
    <string name="JUBAO_ITEM4">影响维知文章质量</string>
    <string name="JUBAO_TEXT4">发表的文章过分低俗或者过分灰色化。</string>
    <string name="PINLUN_TEXT">评论</string>
    <string name="PINLUN_TEXT2">请输入评论内容</string>
    <string name="PINLUN_MENU">查看用户信息</string>
    <string name="PINLUN_MENU2">查看评论回复列表</string>
    <string name="PINLUN_MENU3">复制评论</string>
    <string name="PINLUN_MENU4">举报评论</string>
    <string name="PINLUN_REPLY_BT">评论回复</string>
    <string name="PINLUN_REPLY_TASK">回复列表</string>
    <string name="PINLUN_REPLY_MENU">查看用户信息</string>
    <string name="PINLUN_REPLY_MENU2">复制评论</string>
    <string name="PINLUN_REPLY_MENU3">举报评论</string>
    <string name="WenZhanBT1">参考链接</string>
    <string name="WenZhanBT2">作者保留所有权</string>
    <string name="ME_QRCODE_TEXT1">我的二维码</string>
    <string name="ME_QRCODE_TEXT2">保存二维码</string>
    <string name="WEB_TEXT1">请输入网址</string>
    <string name="WEB_TEXT2">前  往</string>
    <string name="WEB_DDALOG_TEXT1">添  加</string>
    <string name="WEB_DDALOG_BeiZhu_TEXT1">给你的网址添加备注</string>
    <string name="WEB_DDALOG_LINKLIST_TEXT1">本地收藏夹</string>
    <string name="SESSION_TEXT">请输入聊天内容</string>
    <string name="QRCODE_DB_TEXT">扫描二维码，查看我的主页</string>
    <string name="CHOOSE_TEXT1">从相册选取图片</string>
    <string name="CHOOSE_TEXT2">拍照选取图片</string>
    <string name="RELEASE_TEXT1">发表文章</string>
    <string name="RELEASE_TEXT2">给你的文章添加标题</string>
    <string name="RELEASE_TEXT3">给你的文章添加标签</string>
    <string name="RELEASE_TEXT4">给你的文章添加参考链接</string>
    <string name="RELEASE_TEXT5">编辑你的文章正文</string>
    <string name="GOODS_TEXT1">唯知商城</string>
    <string name="HOT_TEXT1">热门卡片</string>
    <string name="SET_TEXT1">程序设置</string>
    <string name="SET_TEXT2">基本设置</string>
    <string name="SET_TEXT3">设置字体大小</string>
    <string name="SET_TEXT4">字体大小只对卡片浏览界面生效</string>
    <string name="SET_TEXT5">清空本地缓存</string>
    <string name="SET_TEXT6">清空本地数据库的卡片数据</string>
    <string name="SET_TEXT7">版本更新</string>
    <string name="SET_TEXT8">当前版本 : Version 1.0</string>
    <string name="SET_TEXT9">版本介绍</string>
    <string name="SET_TEXT10">介绍当前版本的新功能</string>
    <string name="SET_TEXT11">用户协议</string>
    <string name="SET_TEXT12">查看当前使用的用户协议</string>
    <string name="SET_TEXT13">意见反馈</string>
    <string name="SET_TEXT14">把您遇到的问题和建议发送给我们</string>
    <string name="SET_TEXT15">其他设置</string>
    <string name="SET_TEXT16">自动更新</string>
    <string name="SET_TEXT17">自动更新到最新版APP</string>
    <string name="SET_TEXT18">设置底部导航样式</string>
    <string name="SET_TEXT19">选择适合您的底部交互方式</string>
    <string name="SET_TEXT20">关于</string>
    <string name="SET_TEXT21">OnlyKnow开源项目主页</string>
    <string name="SET_FONT_DDALOG_TEXT1">标准</string>
    <string name="SET_FONT_DDALOG_TEXT2">大</string>
    <string name="SET_FONT_DDALOG_TEXT3">中</string>
    <string name="SET_FONT_DDALOG_TEXT4">小</string>
    <string name="CONTENT_TEXT1">内容查看器</string>
    <string name="FEEDBACK_TEXT1">意见反馈</string>
    <string name="FEEDBACK_TEXT2">请输入您的意见和建议</string>
    <string name="FEEDBACK_TEXT3">提交意见</string>
    <string name="SIGNUP_XIEYI_TEXT">我已阅读并同意用户协议</string>
    <string name="GUANZHU_KAPIAN_TEXT1">取消关注</string>
    <string name="title_activity_card_tw">CardTWActivity</string>
    <string name="moRen_Title">永远要相信每天都有\n美好的故事发生，在不同的街道\n遇到不同的人，在不同的天气，感受不一样的心情\n今天，你好 !</string>
    <string name="dialog_remove_session">是否删除该会话 ? 删除后所有聊天记录将清空!</string>
    <string name="articleDialog">为了保障文章质量,通常我们会对您发表的文章进行审批!如果存在违反用户协议的内容,我们会删除您的文章,如果严重我们将执行用户限制,当然您也可以在商店购买用户免审批权限,直接发表文章,但这不代表您可以违法上述内容!</string>
    <string name="filter_vcode">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="downloaded"> %s %%</string>
</resources>
